--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ minecraft_version=1.16.3
 yarn_mappings=1.16.3+build.33
 loader_version=0.10.1+build.209
 # Mod Properties
-mod_version=0.0.1-SNAPSHOT
+mod_version=0.0.1
 maven_group=com.watersfall
-archives_base_name=poisonedweapons
+archives_base_name=alchemy
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.23.0+build.410-1.16
