Add "The Lost Forest" biome to The Unknown

--- a/src/main/resources/data/waters_alchemy_mod/worldgen/noise_settings/the_unknown.json
+++ b/src/main/resources/data/waters_alchemy_mod/worldgen/noise_settings/the_unknown.json
@@ -20,7 +20,11 @@
 	},
 	"structures": {
 		"structures": {
-
+			"waters_alchemy_mod:unknown_pillar": {
+				"spacing": 4,
+				"separation": 2,
+				"salt": 12
+			}
 		}
 	},
 	"noise": {
