--- a/src/main/resources/data/waters_alchemy_mod/dimension/the_unknown.json
+++ b/src/main/resources/data/waters_alchemy_mod/dimension/the_unknown.json
@@ -6,11 +6,59 @@
 		"settings": "waters_alchemy_mod:the_unknown",
 		"biome_source": {
 			"seed": -12,
+			"humidity_noise": {
+				"firstOctave": -7,
+				"amplitudes": [
+					0.0,
+					1.0
+				]
+			},
+			"altitude_noise": {
+				"firstOctave": -7,
+				"amplitudes": [
+					0.0,
+					1.0
+				]
+			},
+			"weirdness_noise": {
+				"firstOctave": -7,
+				"amplitudes": [
+					0.0,
+					1.0
+				]
+			},
+			"temperature_noise": {
+				"firstOctave": -7,
+				"amplitudes": [
+					0.0,
+					1.0
+				]
+			},
 			"biomes": [
-				"waters_alchemy_mod:the_unknown"
+				{
+					"biome": "waters_alchemy_mod:the_unknown",
+					"parameters": {
+						"altitude": 0,
+						"temperature": 0,
+						"humidity": 0,
+						"weirdness": 1,
+						"offset": 0
+					}
+				},
+				{
+					"biome": "waters_alchemy_mod:the_lost_forest",
+					"parameters": {
+						"altitude": 0.1,
+						"temperature": 0.1,
+						"humidity": 0.1,
+						"weirdness": 1,
+						"offset": 0
+					}
+				}
 			],
-			"type": "fixed",
-			"biome": "waters_alchemy_mod:the_unknown"
+			"type": "minecraft:multi_noise",
+			"large_biomes": false,
+			"legacy_biome_init_layer": false
 		}
 	}
 }
