--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=21w14a
-yarn_mappings=21w14a+build.28
+minecraft_version=1.17-pre1
+yarn_mappings=1.17-pre1+build.9
 loader_version=0.11.3
-fabric_version=0.32.7+1.17
+fabric_version=0.34.8+1.17
 # Mod Properties
 mod_version=0.0.1
 maven_group=net.watersfall
