--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.52
 loader_version=0.11.7
 fabric_version=0.40.1+1.17
+rei_version=6.0.307-alpha
 # Mod Properties
 mod_version=0.0.1
 maven_group=net.watersfall
