--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.8-SNAPSHOT'
+    id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -32,7 +32,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     //Me
-    modImplementation "net.watersfall:wet:1.0.0"
+    modImplementation "net.watersfall:wet:0.1.0"
 }
 
 processResources {
@@ -48,7 +48,7 @@ processResources {
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
-    it.options.release = 16
+    it.options.release = 17
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
@@ -60,7 +60,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 }
 
 loom {
-    accessWidener "src/main/resources/thuwumcraft.accesswidener"
+    accessWidener file("src/main/resources/thuwumcraft.accesswidener")
 }
 
 jar {
