--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.52
-loader_version=0.11.7
-fabric_version=0.40.1+1.17
-rei_version=6.0.307-alpha
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.8
+fabric_version=0.44.0+1.18
+rei_version=7.0.343
 # Mod Properties
 mod_version=0.0.1
 maven_group=net.watersfall
