--- a/src/main/resources/data/thuwumcraft/dimension_type/the_unknown.json
+++ b/src/main/resources/data/thuwumcraft/dimension_type/the_unknown.json
@@ -13,6 +13,6 @@
 	"logical_height": 256,
 	"min_y": -128,
 	"height": 256,
-	"infiniburn": "minecraft:infiniburn_end",
+	"infiniburn": "#minecraft:infiniburn_end",
 	"effects": "the_end"
 }
